--- a/sections/footer.html
+++ b/sections/footer.html
@@ -20,6 +20,8 @@
                     <li><a href="#productos">Productos</a></li>
                     <li><a href="#nosotros">Nosotros</a></li>
                     <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="#testimonios">Testimonios</a></li> <!-- Enlace a nueva sección -->
+                    <li><a href="#faq">Preguntas Frecuentes</a></li> <!-- Enlace a nueva sección -->
                 </ul>
             </div>
 
@@ -32,11 +34,12 @@
             </div>
 
             <div class="footer-section">
-                <h3>Servicios</h3>
-                <ul>
-                    <li><a href="#">Pedidos a Domicilio</a></li>
-                    <li><a href="#">Personalización de Tortas</a></li>
-                </ul>
+                <h3>Suscríbete a Nuestro Boletín (NUEVO)</h3>
+                <p>Recibe las últimas noticias, ofertas y recetas directamente en tu bandeja de entrada.</p>
+                <form class="newsletter-form">
+                    <input type="email" placeholder="Tu correo electrónico" required>
+                    <button type="submit">Suscribirse</button>
+                </form>
             </div>
         </div>
 
