--- a/sections/products.html
+++ b/sections/products.html
@@ -17,5 +17,10 @@
         <div class="product-grid" id="productGrid">
             <!-- Products will be loaded here by JavaScript -->
         </div>
+
+        <!-- Contenedor para el botón "Cargar Más" (NUEVO) -->
+        <div class="load-more-container">
+            <button id="loadMoreBtn" class="cta-button hidden">Cargar Más Productos</button>
+        </div>
     </div>
 </div>
