correcion de categorias.html

--- a/sections/categories.html
+++ b/sections/categories.html
@@ -4,7 +4,7 @@
         <div class="category-grid">
             <div class="category-card" onclick="filterProducts('tortas-cuadradas')">
                 <div class="category-image">
-                    <img src="../images/tortas-cuadradas.jpg" alt="Tortas Cuadradas" />
+                    <img src="images/tortas-cuadradas.jpg" alt="Tortas Cuadradas" />
                 </div>
                 <div class="category-info">
                     <h3>Tortas Cuadradas</h3>
@@ -14,7 +14,7 @@
 
             <div class="category-card" onclick="filterProducts('tortas-circulares')">
                 <div class="category-image">
-                    <img src="../images/tortas-circulares.jpg" alt="Tortas Circulares" />
+                    <img src="images/tortas-circulares.jpg" alt="Tortas Circulares" />
                 </div>
                 <div class="category-info">
                     <h3>Tortas Circulares</h3>
@@ -24,7 +24,7 @@
 
             <div class="category-card" onclick="filterProducts('postres-individuales')">
                 <div class="category-image">
-                    <img src="../images/postres-individuales.jpg" alt="Postres Individuales" />
+                    <img src="images/postres-individuales.jpg" alt="Postres Individuales" />
                 </div>
                 <div class="category-info">
                     <h3>Postres Individuales</h3>
@@ -34,7 +34,7 @@
 
             <div class="category-card" onclick="filterProducts('sin-azucar')">
                 <div class="category-image">
-                    <img src="../images/sin-azucar.jpg" alt="Productos Sin Azúcar" />
+                    <img src="images/sin-azucar.jpg" alt="Productos Sin Azúcar" />
                 </div>
                 <div class="category-info">
                     <h3>Productos Sin Azúcar</h3>
@@ -44,7 +44,7 @@
 
             <div class="category-card" onclick="filterProducts('tradicional')">
                 <div class="category-image">
-                    <img src="../images/tradicional.jpg" alt="Pastelería Tradicional" />
+                    <img src="images/tradicional.jpg" alt="Pastelería Tradicional" />
                 </div>
                 <div class="category-info">
                     <h3>Pastelería Tradicional</h3>
@@ -54,7 +54,7 @@
 
             <div class="category-card" onclick="filterProducts('sin-gluten')">
                 <div class="category-image">
-                    <img src="../images/sin-gluten.jpg" alt="Sin Gluten" />
+                    <img src="images/sin-gluten.jpg" alt="Sin Gluten" />
                 </div>
                 <div class="category-info">
                     <h3>Sin Gluten</h3>
@@ -64,7 +64,7 @@
 
             <div class="category-card" onclick="filterProducts('vegana')">
                 <div class="category-image">
-                    <img src="../images/vegana.jpg" alt="Vegana" />
+                    <img src="images/vegana.jpg" alt="Vegana" />
                 </div>
                 <div class="category-info">
                     <h3>Vegana</h3>
@@ -74,7 +74,7 @@
 
             <div class="category-card" onclick="filterProducts('especiales')">
                 <div class="category-image">
-                    <img src="../images/especiales.jpg" alt="Especiales" />
+                    <img src="images/especiales.jpg" alt="Especiales" />
                 </div>
                 <div class="category-info">
                     <h3>Especiales</h3>
