Se agrego testimonials.html

--- a/sections/testimonials.html
+++ b/sections/testimonials.html
@@ -1,24 +1,31 @@
-    <div class="testimonials" id="testimonios">
-        <div class="container">
-            <h2 class="section-title">Lo que dicen nuestros clientes</h2>
-            <div class="testimonial-grid">
-                <div class="testimonial-card">
-                    <p>"¡Absolutamente deliciosas! La torta de chocolate es un sueño hecho realidad. Siempre mi primera opción para cualquier celebración."</p>
-                    <p class="author">- María G.</p>
-                </div>
-                <div class="testimonial-card">
-                    <p>"El servicio es impecable y los productos son de la más alta calidad. La tarta de Santiago me transporta a España."</p>
-                    <p class="author">- Juan P.</p>
-                </div>
-                <div class="testimonial-card">
-                    <p>"Como vegana, encontrar opciones tan ricas es un desafío. Sus galletas de avena veganas son las mejores que he probado."</p>
-                    <p class="author">- Sofía R.</p>
-                </div>
-                <div class="testimonial-card">
-                    <p>"Cada bocado es una explosión de sabor. La atención al detalle y la frescura de los ingredientes son inigualables."</p>
-                    <p class="author">- Carlos M.</p>
-                </div>
+<div class="testimonials" id="testimonios">
+    <div class="container">
+        <h2 class="section-title">Lo que dicen nuestros clientes</h2>
+        <div class="testimonial-grid">
+            <div class="testimonial-card">
+                <p>"Rica! probé la torta de mil hojas con manjar y casi lloro… es como comer un pedacito de infancia. Si pudiera, me llevaría media pastelería a la casa. Muy recomendados, además atienden con pura buena onda."</p>
+                <p class="author">- María Gonzalez.</p>
+            </div>
+            <div class="testimonial-card">
+                <p>"Fui de pasada por curiosidad y terminé llevándome una torta entera de maracuyá. ¡Qué explosión de sabor, compadre! Se nota que lo hacen con cariño, nada de industrial. Ahora cada vez que tengo cumpleaños en la familia, ya sabemos dónde ir."</p>
+                <p class="author">- Romina Luna.</p>
+            </div>
+            <div class="testimonial-card">
+                <p>"Soy vegana y cuesta encontrar pastelerías con opciones ricas de verdad… pero acá quedé loca. El queque de zanahoria vegano estaba húmedo, sabroso y con un glaseado que ni se nota que no lleva lácteos. ¡Por fin un lugar donde puedo comer tranquila y disfrutar sin culpa!."</p>
+                <p class="author">- Sofía Riquelme.</p>
+            </div>
+            <div class="testimonial-card">
+                <p>"Hermano, los berlines rellenos de crema son otro nivel. Crujientes por fuera, suaves por dentro… y el café que tienen acompaña perfecto. Si andan cerca, no se lo pierdan, porque de verdad que vale la pena."</p>
+                <p class="author">- Erick Bustamante.</p>
+            </div>
+            <div class="testimonial-card">
+                <p>"Pasé a comprar un kuchen de frambuesa para la once y uff… ¡qué manera de desaparecer rápido en la mesa! Hasta mi abuela, que es exigente con los dulces, pidió repetición. Ya me ganaron como cliente fijo."</p>
+                <p class="author">- Daniela Fuentes.</p>
+            </div>
+            <div class="testimonial-card">
+                <p>"Encargamos una torta personalizada para el cumple de mi hijo y quedó preciosa, además de riquísima. Se pasaron con la decoración, todos quedaron impresionados."</p>
+                <p class="author">- Cristian Morales.</p>
             </div>
         </div>
     </div>
-    
+</div>
