se agrego detalle del faq, que se despliegue el menu de cada pregunta frecuente

--- a/sections/faq.html
+++ b/sections/faq.html
@@ -1,25 +1,40 @@
 <div class="faq" id="faq">
-    <div class="container">
-        <h2 class="section-title">Preguntas Frecuentes</h2>
-        <div class="faq-item">
-            <h3 class="faq-question">¿Cuáles son los métodos de pago aceptados?</h3>
-            <p class="faq-answer">Aceptamos tarjetas de crédito (Visa, Mastercard, American Express), PayPal y transferencias bancarias.</p>
-        </div>
-        <div class="faq-item">
-            <h3 class="faq-question">¿Realizan envíos a todo Chile?</h3>
-            <p class="faq-answer">Sí, realizamos envíos a todas las regiones de Chile. Los tiempos y costos de envío varían según la ubicación. Puedes consultar los detalles en nuestra sección de envíos.</p>
-        </div>
-        <div class="faq-item">
-            <h3 class="faq-question">¿Puedo personalizar mi torta?</h3>
-            <p class="faq-answer">¡Claro! Ofrecemos opciones de personalización para la mayoría de nuestras tortas, incluyendo mensajes especiales, colores y algunos diseños. Contáctanos con tus ideas y te ayudaremos a crear la torta perfecta.</p>
-        </div>
-        <div class="faq-item">
-            <h3 class="faq-question">¿Cómo puedo aplicar los descuentos?</h3>
-            <p class="faq-answer">Los descuentos se aplican automáticamente al registrarte si cumples con los requisitos de edad, o puedes ingresar el código "FELICES50" en el carrito de compras para el descuento de por vida. Los estudiantes de Duoc deben registrarse con su correo institucional para recibir su torta de cumpleaños.</p>
-        </div>
-        <div class="faq-item">
-            <h3 class="faq-question">¿Los productos sin gluten y veganos son aptos para alérgicos severos?</h3>
-            <p class="faq-answer">Nuestros productos sin gluten y veganos se elaboran con ingredientes específicos, pero se producen en una cocina donde también se manipulan alérgenos como gluten, lácteos y frutos secos. Aunque tomamos precauciones, no podemos garantizar la ausencia total de trazas. Si tienes alergias severas, te recomendamos precaución.</p>
-        </div>
-    </div>
+  <div class="container">
+    <h2 class="section-title">Preguntas Frecuentes</h2>
+
+    <details class="faq-item">
+      <summary class="faq-question">¿Cuáles son los métodos de pago aceptados?</summary>
+      <div class="faq-answer">
+        <p>Aceptamos tarjetas de crédito (Visa, Mastercard, American Express), PayPal y transferencias bancarias.</p>
+      </div>
+    </details>
+
+    <details class="faq-item">
+      <summary class="faq-question">¿Realizan envíos a todo Chile?</summary>
+      <div class="faq-answer">
+        <p>Sí, realizamos envíos a todas las regiones de Chile. Los tiempos y costos de envío varían según la ubicación.</p>
+      </div>
+    </details>
+
+    <details class="faq-item">
+      <summary class="faq-question">¿Puedo personalizar mi torta?</summary>
+      <div class="faq-answer">
+        <p>¡Claro! Ofrecemos opciones de personalización para la mayoría de nuestras tortas. Contáctanos con tus ideas.</p>
+      </div>
+    </details>
+
+    <details class="faq-item">
+      <summary class="faq-question">¿Cómo puedo aplicar los descuentos?</summary>
+      <div class="faq-answer">
+        <p>Los descuentos se aplican automáticamente al registrarte si cumples con los requisitos de edad, o puedes ingresar el código "FELICES50" en el carrito.</p>
+      </div>
+    </details>
+
+    <details class="faq-item">
+      <summary class="faq-question">¿Los productos sin gluten y veganos son aptos para alérgicos severos?</summary>
+      <div class="faq-answer">
+        <p>Se elaboran con precauciones pero en la misma cocina se manipulan alérgenos. Para alergias severas, recomendamos precaución.</p>
+      </div>
+    </details>
+  </div>
 </div>
