se agregan imagenes de los productos principales

--- a/sections/testimonials.html
+++ b/sections/testimonials.html
@@ -16,7 +16,7 @@
             </div>
             <div class="testimonial-card">
                 <p>"Hermano, los berlines rellenos de crema son otro nivel. Crujientes por fuera, suaves por dentro… y el café que tienen acompaña perfecto. Si andan cerca, no se lo pierdan, porque de verdad que vale la pena."</p>
-                <p class="author">- Erick Bustamante.</p>
+                <p class="author">- Emanuel Moyano.</p>
             </div>
             <div class="testimonial-card">
                 <p>"Pasé a comprar un kuchen de frambuesa para la once y uff… ¡qué manera de desaparecer rápido en la mesa! Hasta mi abuela, que es exigente con los dulces, pidió repetición. Ya me ganaron como cliente fijo."</p>
@@ -24,7 +24,7 @@
             </div>
             <div class="testimonial-card">
                 <p>"Encargamos una torta personalizada para el cumple de mi hijo y quedó preciosa, además de riquísima. Se pasaron con la decoración, todos quedaron impresionados."</p>
-                <p class="author">- Cristian Morales.</p>
+                <p class="author">- Donkan Marin.</p>
             </div>
         </div>
     </div>
