se agrega imagen principal

--- a/sections/about.html
+++ b/sections/about.html
@@ -10,7 +10,7 @@
                 <p>Desde hace más de medio siglo, Pastelería Mil Sabores ha sido sinónimo de tradición y excelencia en el mundo de la repostería. Nuestras recetas ancestrales se combinan con técnicas modernas para crear productos únicos que deleitan a toda la familia.</p>
             </div>
             <div class="about-image">
-                <img src="../images/about-image.png" alt="Traditional Chilean bakery kitchen with vintage equipment, wooden tables covered in flour, skilled bakers in white aprons working on artisanal pastries and decorated cakes" />
+                <img src="../images/about-image.jpg" alt=" " />
             </div>
         </div>
     </div>
